--- a/missing_values.ipynb
+++ b/missing_values.ipynb
@@ -105,6 +105,90 @@
    "source": [
     "print(df.fillna('none'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   First Score  Second Score  Third Score\n",
+      "0        100.0          30.0          NaN\n",
+      "1         90.0          45.0         40.0\n",
+      "2         92.5          56.0         80.0\n",
+      "3         95.0          56.0         98.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.interpolate(method='linear'),)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Second Score  Third Score\n",
+      "1          45.0         40.0\n",
+      "2          56.0         80.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.iloc[1:3,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    100.0\n",
+      "1     90.0\n",
+      "2      NaN\n",
+      "3     95.0\n",
+      "Name: First Score, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['First Score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   First Score  Second Score  Third Score  Fourth Score\n",
+      "0        100.0          30.0          NaN          12.0\n",
+      "1         90.0          45.0         40.0          87.0\n",
+      "2          NaN          56.0         80.0          45.0\n",
+      "3         95.0           NaN         98.0          90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#adding columns to data\n",
+    "df['Fourth Score']=[12.0,87.0 ,45.0,90.0]\n",
+    "print(df)"
+   ]
   }
  ],
  "metadata": {
